k3s/uptime-kuma/uptime-kuma.yml
apiVersion: v1
kind: Namespace
metadata:
  name: uptime-kuma
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uptime-kuma
  namespace: uptime-kuma
  labels:
    app: uptime-kuma
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uptime-kuma
  template:
    metadata:
      labels:
        app: uptime-kuma
    spec:
      containers:
        - name: uptime-kuma
          image: louislam/uptime-kuma:latest
          ports:
            - containerPort: 3001
          volumeMounts:
            - name: kuma-volume
              mountPath: /app/data
      volumes:
        - name: kuma-volume
          persistentVolumeClaim:
            claimName: uptime-kuma-pvc
