k3s/uptime-kuma/load-balancer.yml
apiVersion: v1
kind: Service
metadata:
  name: uptime-lb
  namespace: uptime-kuma
spec:
  selector:
    app: uptime-kuma
  ports:
    - port: 3001
      targetPort: 3001
  type: LoadBalancer
  loadBalancerIP: 192.168.1.204
