k3s/uptime-kuma/ingress-traefik.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptime-ing-traefik
  namespace: uptime-kuma
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  rules:
  - host: "uptime.bird.nest"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: uptime-int-svc
            port:
              number: 3001
